# AXIOM-AETHER

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  axiom.env  axiom_autostart_task.xml  docker-compose.yml  pyproject.toml  start_axiom.sh
.github/workflows/: docker.yml  release.yml
axiom_engine/: __init__.py  claude_backend.py  config.py  inference.py  jit_streamer.py  kernel.py  response_cache.py  server.py  ttt_layer.py
axiom_engine_rs/: Cargo.toml  axiom_kernel_v1.safetensors
axiom_engine_rs/src/: adapter.rs  anthropic_forwarder.rs  chunk_kernel.rs  claude_backend.rs  cluster.rs  config.rs  context_compressor.rs  data_gen.rs  inference.rs  jit_streamer.rs  kernel.rs  lib.rs  log_scan.rs  main.rs  mcp_stdio.rs  memory_pool.rs  meta_train.rs  metrics.rs  model.rs  quantization.rs  server.rs  train.rs  ttt_block.rs  ttt_layer.rs  vibe_memory.rs
axiom_engine_rs/tests/: active_compression_e2e.rs  messages_adapter.rs  production_chaos_sim.rs  semantic_harness.rs  stress.rs  verification.rs
scripts/: audit_compression.sh  axiom-guard.sh  axiom-wipe.sh  smoke_compression.sh  smoke_live.sh  token_savings_test.js
scripts/lib/: axiom-structural.js
tests/: _smoke_cache.py  _smoke_server.py  _wire_test_client.py  test_response_cache.py  test_server_adapters.py
